adjust code vertical alignment to baseline to fix chrome bug

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -63,6 +63,7 @@ pre {
 }
 code {
   display: inline-block;
+  vertical-align: baseline;
 }
 pre {
   display: block;
